--- a/index.html
+++ b/index.html
@@ -446,6 +446,16 @@
             <div class="industry-icon">
               <i class="fas fa-landmark"></i>
             </div>
+            <div class="industry-content">
+                <h3>Government</h3>
+                <p>Secure, air-gapped networks meeting FedRAMP and FISMA compliance standards.</p>
+                <div class="industry-badges">
+                  <span>FedRAMP</span>
+                  <span>FISMA</span>
+                  <span>Top Secret</span>
+                </div>
+              </div>
+            </div>
 
 
 <!-- Partners Section -->
