--- a/index.html
+++ b/index.html
@@ -456,6 +456,11 @@
                 </div>
               </div>
             </div>
+              <!-- Retail -->
+        <div class="industry-card">
+            <div class="industry-icon">
+              <i class="fas fa-shopping-bag"></i>
+            </div>
 
 
 <!-- Partners Section -->
