--- a/index.html
+++ b/index.html
@@ -461,6 +461,19 @@
             <div class="industry-icon">
               <i class="fas fa-shopping-bag"></i>
             </div>
+            <div class="industry-content">
+                <h3>Retail</h3>
+                <p>Omnichannel networks with seamless POS integration and customer analytics.</p>
+                <div class="industry-badges">
+                  <span>PCI</span>
+                  <span>Omnichannel</span>
+                  <span>Analytics</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 <!-- Partners Section -->
