--- a/index.html
+++ b/index.html
@@ -475,6 +475,17 @@
         </div>
       </section>
 
+       <!-- Resources Section -->
+<section class="resources" id="resources">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-subtitle">Knowledge Center</span>
+        <h2 class="section-title">Resources & Insights</h2>
+        <p class="section-description">
+          Access whitepapers, case studies, and technical guides to optimize your network.
+        </p>
+      </div>
+
 
 <!-- Partners Section -->
 <section class="partners">
