--- a/index.html
+++ b/index.html
@@ -485,6 +485,13 @@
           Access whitepapers, case studies, and technical guides to optimize your network.
         </p>
       </div>
+      <div class="resources-tabs">
+        <div class="tab-buttons">
+          <button class="tab-btn active" data-tab="whitepapers">Whitepapers</button>
+          <button class="tab-btn" data-tab="casestudies">Case Studies</button>
+          <button class="tab-btn" data-tab="webinars">Webinars</button>
+          <button class="tab-btn" data-tab="apidocs">API Docs</button>
+        </div>
 
 
 <!-- Partners Section -->
