--- a/index.html
+++ b/index.html
@@ -492,6 +492,21 @@
           <button class="tab-btn" data-tab="webinars">Webinars</button>
           <button class="tab-btn" data-tab="apidocs">API Docs</button>
         </div>
+        <div class="tab-content active" id="whitepapers">
+            <div class="resource-grid">
+              <!-- Resource 1 -->
+              <div class="resource-card">
+                <div class="resource-badge">PDF</div>
+                <div class="resource-content">
+                  <h3>Quantum Networking Architecture</h3>
+                  <p>48-page technical guide to implementing quantum-resistant networks.</p>
+                  <div class="resource-meta">
+                    <span><i class="far fa-file-pdf"></i> 4.2 MB</span>
+                    <span><i class="far fa-calendar-alt"></i> May 2023</span>
+                  </div>
+                  <a href="#" class="resource-link">Download <i class="fas fa-download"></i></a>
+                </div>
+              </div>
 
 
 <!-- Partners Section -->
