--- a/index.html
+++ b/index.html
@@ -507,6 +507,21 @@
                   <a href="#" class="resource-link">Download <i class="fas fa-download"></i></a>
                 </div>
               </div>
+               <!-- Resource 2 -->
+            <div class="resource-card">
+                <div class="resource-badge">PDF</div>
+                <div class="resource-content">
+                  <h3>AI-Driven Network Optimization</h3>
+                  <p>How machine learning reduces operational costs by 37% on average.</p>
+                  <div class="resource-meta">
+                    <span><i class="far fa-file-pdf"></i> 2.8 MB</span>
+                    <span><i class="far fa-calendar-alt"></i> March 2023</span>
+                  </div>
+                  <a href="#" class="resource-link">Download <i class="fas fa-download"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
 <!-- Partners Section -->
