--- a/index.html
+++ b/index.html
@@ -522,6 +522,21 @@
               </div>
             </div>
           </div>
+          <div class="tab-content" id="casestudies">
+            <div class="resource-grid">
+              <!-- Case Study 1 -->
+              <div class="resource-card">
+                <div class="resource-badge">Case Study</div>
+                <div class="resource-content">
+                  <h3>Fortune 500 Healthcare Provider</h3>
+                  <p>How we reduced network downtime by 99.7% for 240 hospitals.</p>
+                  <div class="resource-meta">
+                    <span><i class="fas fa-building"></i> Healthcare</span>
+                    <span><i class="fas fa-chart-bar"></i> 73% ROI</span>
+                  </div>
+                  <a href="#" class="resource-link">Read Story <i class="fas fa-arrow-right"></i></a>
+                </div>
+              </div>
 
 
 <!-- Partners Section -->
