--- a/index.html
+++ b/index.html
@@ -537,6 +537,21 @@
                   <a href="#" class="resource-link">Read Story <i class="fas fa-arrow-right"></i></a>
                 </div>
               </div>
+               <!-- Case Study 2 -->
+            <div class="resource-card">
+                <div class="resource-badge">Case Study</div>
+                <div class="resource-content">
+                  <h3>Global Financial Institution</h3>
+                  <p>Implementing quantum encryption across 84 international branches.</p>
+                  <div class="resource-meta">
+                    <span><i class="fas fa-building"></i> Finance</span>
+                    <span><i class="fas fa-shield-alt"></i> Zero Breaches</span>
+                  </div>
+                  <a href="#" class="resource-link">Read Story <i class="fas fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
 <!-- Partners Section -->
