--- a/index.html
+++ b/index.html
@@ -552,6 +552,31 @@
               </div>
             </div>
           </div>
+          <div class="tab-content" id="webinars">
+            <h2>Upcoming Webinars</h2>
+            <ul>
+              <li>
+                <h3>Introduction to Cloud Computing</h3>
+                <p>Date: May 20, 2025</p>
+                <p>Speaker: Jonathan Kim, Cloud Architect</p>
+                <p>Learn the basics of cloud infrastructure and deployment strategies.</p>
+                <p>Venue: Daima Towers Eldoret RM54 3rd Floor</p>
+              </li>
+              <li>
+                <h3>Advanced DevSecOps Techniques</h3>
+                <p>Date: May 25, 2025</p>
+                <p>Speaker: Ridge Junior, DevSecOps Engineer</p>
+                <p>Dive into automated security practices within CI/CD pipelines.</p>
+                <p>Venue: Daima Towers Eldoret RM54 3rd Floor</p>
+              </li>
+            </ul>
+          </div>
+          
+          <div class="tab-content" id="apidocs">
+            <!-- API Docs content would go here -->
+          </div>
+        </div>
+        
 
 
 <!-- Partners Section -->
