Updated social navigation links

--- a/index.html
+++ b/index.html
@@ -583,8 +583,6 @@
         </div>
       </section>
         
-
-
 <!-- Partners Section -->
 <section class="partners">
     <div class="container">
@@ -639,8 +637,8 @@
                     Leading the quantum networking revolution with cutting-edge solutions for the enterprises of tomorrow.
                 </p>
                 <div class="footer-social">
-                    <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://x.com/Ridge16352045" target="_blank" class="social-icon"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/ridge-junior-2bb333204/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                     <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
                 </div>
@@ -692,7 +690,7 @@
     </div>
 </footer>
 <!-- Scripts -->
-   
+
 <script src="script.js"></script>
 </body>
 </html>
