--- a/index.html
+++ b/index.html
@@ -639,8 +639,7 @@
                 <div class="footer-social">
                     <a href="https://x.com/Ridge16352045" target="_blank" class="social-icon"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.linkedin.com/in/ridge-junior-2bb333204/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/@studiocodex-ridge" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="footer-col">
