--- a/index.html
+++ b/index.html
@@ -645,19 +645,19 @@
             <div class="footer-col">
                 <h3 class="footer-title">Solutions</h3>
                 <ul class="footer-links">
-                    <li><a href="#">Quantum Security</a></li>
-                    <li><a href="#">AI Networking</a></li>
-                    <li><a href="#">Edge Computing</a></li>
-                    <li><a href="#">Cloud Networking</a></li>
-                    <li><a href="#">IoT Infrastructure</a></li>
+                    <li><a href="https://www.nomios.com/resources/what-is-quantum-security/" target="_blank">Quantum Security</a></li>
+                    <li><a href="https://networklessons.com/cisco/ccna-200-301/ai-and-ml-in-networking" target="_blank">AI Networking</a></li>
+                    <li><a href="https://www.ibm.com/think/topics/edge-computing#:~:text=Edge%20computing%20is%20a%20distributed,times%20and%20better%20bandwidth%20availability." target="_blank">Edge Computing</a></li>
+                    <li><a href="https://www.vmware.com/topics/cloud-networking" target="_blank">Cloud Networking</a></li>
+                    <li><a href="https://www.macrometa.com/iot-infrastructure" target="_blank">IoT Infrastructure</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h3 class="footer-title">Products</h3>
                 <ul class="footer-links">
-                    <li><a href="#">Routers</a></li>
-                    <li><a href="#">Switches</a></li>
-                    <li><a href="#">Security</a></li>
+                    <li><a href="https://www.cisco.com/c/en/us/products/routers/product-listing.html" target="_blank">Routers</a></li>
+                    <li><a href="https://www.cisco.com/site/us/en/products/networking/switches/index.html" target="_blank">Switches</a></li>
+                    <li><a href="https://owasp.org/www-project-top-ten/" target="_blank">Security</a></li>
                     <li><a href="#">Software</a></li>
                     <li><a href="#">Management</a></li>
                 </ul>
