--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 NexusNet. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> | <a href="#">Cookies</a></p>
+            <p>&copy; 2025 NexusNet. All rights reserved. | <a href="privacy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a> | <a href="cookies.html">Cookies</a></p>
         </div>
     </div>
 </footer>
