--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                     <li><a href="https://www.cisco.com/c/en/us/products/routers/product-listing.html" target="_blank">Routers</a></li>
                     <li><a href="https://www.cisco.com/site/us/en/products/networking/switches/index.html" target="_blank">Switches</a></li>
                     <li><a href="https://owasp.org/www-project-top-ten/" target="_blank">Security</a></li>
-                    <li><a href="#">Software</a></li>
+                    <li><a href="https://www.cisco.com/site/us/en/products/software/index.html?filters=&search=&sort=a-z&filterby=&showMore=">Software</a></li>
                     <li><a href="#">Management</a></li>
                 </ul>
             </div>
